# remove_bg_for_opencampus

./: index.html  main.py  opencv_bg_clean.py  pyproject.toml  remove_bg.py  requirements.txt
docs/: index.html  terms_of_service.html
