[project]
name = "opencampus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "attrs==26.1.0",
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "fastapi>=0.136.3",
    "flatbuffers==25.12.19",
    "idna==3.15",
    "imageio==2.37.3",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "lazy-loader==0.5",
    "llvmlite==0.47.0",
    "networkx==3.6.1",
    "numba==0.65.1",
    "numpy==2.4.6",
    "onnxruntime==1.26.0",
    "opencv-python>=4.13.0.92",
    "packaging==26.2",
    "pillow==12.2.0",
    "platformdirs==4.9.6",
    "pooch==1.9.0",
    "protobuf==7.34.1",
    "pymatting==1.1.15",
    "python-multipart>=0.0.29",
    "referencing==0.37.0",
    "rembg==2.0.75",
    "requests==2.34.2",
    "rpds-py==0.30.0",
    "scikit-image==0.26.0",
    "scipy==1.17.1",
    "tifffile==2026.5.15",
    "tqdm==4.67.3",
    "urllib3==2.7.0",
    "uvicorn>=0.48.0",
]
